<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tea.presentation.home.TeaFragment"
        android:label="@string/menu_tea"
        tools:layout="@layout/fragment_tea" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tea.presentation.gallery.KofeFragment"
        android:label="@string/menu_kofe"
        tools:layout="@layout/fragment_kofe" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tea.presentation.slideshow.MapFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />




</navigation>